# myproject

./: .gitignore  LICENSE  README.md
ChickenEvil/: ChickenEvil.sln  readme.md
ChickenEvil/ChickenEvil/: ChickenEvil.vcxproj  ChickenEvil.vcxproj.filters  animation.h  atlas.h  bullet.h  camera.h  character_manager.cpp  character_manager.h  chicken.h  collision_box.h  collision_layer.h  collision_manager.cpp  collision_manager.h  main.cpp  particle_effect.h  particle_manager.cpp  particle_manager.h  resources_manager.cpp  resources_manager.h  timer.h  turrent.h  util.h  vector2.h
GhostEscape/: CMakeLists.txt  readme.md
GhostEscape/src/: enemy.cpp  enemy.h  filename_to_resID.h  main.cpp  player.cpp  player.h  resID.h  scene_main.cpp  scene_main.h  scene_tittle.cpp  scene_tittle.h  spell_thunder.h  weapon_thunder.cpp  weapon_thunder.h
GhostEscape/src/affiliate/: affiliate_bar.cpp  collide_box.cpp  collide_box.h  collide_manager.cpp  collide_manager.h  object_affiliate.cpp  object_affiliate.h  quad_tree.cpp  quad_tree.h  sprite.cpp  sprite.h  sprite_anim.cpp  sprite_anim.h
GhostEscape/src/core/: actor.cpp  actor.h  assets_store.cpp  assets_store.h  collide_box.cpp  collide_box.h  defs.h  game.cpp  game.h  object.cpp  object.h  object_affiliate.cpp  object_affiliate.h  object_screen.cpp  object_screen.h  object_world.cpp  object_world.h  observer.h  scene.cpp  scene.h  singleton.h  spawner.h  sprite.cpp  sprite.h  sprite_anim.cpp  sprite_anim.h  status.cpp  status.h  timer.h
GhostEscape/src/hud/: hud_text.cpp  hud_text.h  text_lable.cpp  ui_bar.h  ui_button.cpp  ui_cursor.h  ui_enemy_hp_bar.cpp  ui_player_bar.h  ui_player_skill_bar.h  ui_player_status.cpp  ui_player_status.h
GhostEscape/src/raw/: effect.cpp  effect.h  effect_enemy_spawn.cpp  effect_enemy_spawn.h  move_control.cpp  move_control.h  move_control_keyboardAWSD.cpp  move_control_keyboardAWSD.h  spawner.cpp  spawner.h  spell.cpp  spell.h  spell_bullet.cpp  spell_bullet.h  status.cpp  status.h  timer.h  weapon.cpp  weapon.h  weapon_thunder.cpp  weapon_thunder.h
GhostEscape/src/screen/: hud_text.cpp  hud_text.h  ui_button.cpp  ui_button.h  ui_cursor.cpp  ui_player_status.cpp  ui_player_status.h
GhostEscape/src/ui/: hud_text.h  text_lable.h  ui_bar.cpp  ui_bar.h  ui_button.h  ui_cursor.cpp  ui_cursor.h  ui_enemy_hp_bar.h  ui_player_bar.cpp  ui_player_bar.h  ui_player_skill_bar.cpp  ui_player_skill_bar.h  ui_player_status.cpp  ui_player_status.h  ui_text.cpp  ui_text.h
GhostEscape/src/world/: effect.cpp  effect.h  spell.cpp  spell.h  spell_bullet.cpp  spell_bullet.h
GroupMealsLegend/: GroupMealsLegend.sln  readme.md
GroupMealsLegend/GroupMealsLegend/: GroupMealsLegend.vcxproj  GroupMealsLegend.vcxproj.filters  animation.h  bartend_bottle.cpp  bartend_bottle.h  bartend_material.cpp  bartend_material.h  bartend_meun.cpp  bartend_meun.h  bartend_system.cpp  bartend_system.h  bartend_tool.cpp  bartend_tool.h  bartending_tools.cpp  bartending_tools.h  boundle.h  bundle.h  buondle.cpp  button.cpp  button.h  concrete_scene.cpp  concrete_scene.h  cursor_manager.cpp  cursor_manager.h  delivery_driver.cpp  delivery_driver.h  demo.cpp  dialogue_manager.cpp  dialogue_manager.h  game_system.cpp  game_system.h  goods_boundle.h  goods_bundle.h  kits.h  main.cpp  meal.h  microwave_oven.cpp  microwave_oven.h  region.h  region_manager.cpp  (+12 more)
NoGame/: NoGame.sln  readme.md
NoGame/NoGame/: NoGame.vcxproj  NoGame.vcxproj.filters  affiliate_bar.cpp  affiliate_bar.h  assets_store.h  collide_box.cpp  collide_manager.cpp  collide_manager.h  effect.cpp  enemy.h  game.cpp  game.h  main.cpp  object.cpp  object.h  object_affiliate.cpp  object_affiliate.h  object_screen.h  object_world.cpp  object_world.h  player.cpp  player.h  quad_tree.cpp  quad_tree.h  resID.h  scene.cpp  scene.h  scene_main.h  scene_tittle.cpp  spell.h  spell_bullet.h  sprite.cpp  sprite.h  sprite_anim.cpp  sprite_anim.h  text_lable.h  timer.h  ui_button.h  ui_player_status.cpp  weapon_thunder.cpp
SDL_Shooter/: CMakeLists.txt  CMakePresets.json  build.ps1  readme.md
SDL_Shooter/SDLShooter/: CMakeLists.txt  Makefile  main.cpp  myMakefile
SDL_Shooter/src/: Makefile  gameMgr.cpp  main.cpp  player.cpp  resourcesMgr.cpp  scene.cpp  sceneBegin.cpp  sceneEnd.cpp  sceneMain.cpp
SDL_Shooter/src/include/: gameMgr.h  object.h  player.h  resourcesMgr.h  scene.h  sceneBegin.h  sceneEnd.h  sceneMain.h  singleton.h  vector2.h
TdGame/: TdGame.sln  readme.md
TdGame/TdGame/: RCa03416  TdGame.vcxproj  TdGame.vcxproj.filters  animation.h  bullet.h  bullet_axe.h  bullet_manager.h  bullet_shell.h  bulltet_arrow.h  camera.h  coin_manager.h  coin_prop.h  collision_box.h  collision_manager.h  config_manager.h  enemy.h  enemy_goblin.h  enemy_goblin_priest.h  enemy_king_slime.h  enemy_manager.h  enemy_skeleton.h  enemy_slime.h  enemy_template.h  game_manager.h  home_manager.h  main.cpp  observer.h  panel.h  player_dragon_manager.h  player_template.h  resources_manager.h  singleton.h  status_bar.h  tile.h  timer.h  tower.h  tower_archer.h  tower_axeman.h  tower_gunner.h  tower_manager.h  (+4 more)
TdGame/showing/: 塔防游戏_村庄保卫战.excalidraw
Tivat_Survivor_Game/: Tivat_Survivor_Game.sln  readme.md
Tivat_Survivor_Game/Tivat_Survivor_Game/: Tivat_Survivor_Game.vcxproj  Tivat_Survivor_Game.vcxproj.filters  game.hpp  main.cpp  oldversion.cpp  test.cpp
hakimi_adventure/: hakimi_adventure.sln  readme.md
hakimi_adventure/client/: animation.h  atlas.h  camera.h  cient.cpp  client.vcxproj  client.vcxproj.filters  path.h  player.h  util.h  vector2.h
hakimi_adventure/server/: server.cpp  server.vcxproj
hollow_katana/: README.md  hollow_katana.sln
hollow_katana/hollow_katana/: animation.h  atlas.h  audio_manager.cpp  audio_manager.h  barb.cpp  barb.h  bullet_time_manager.cpp  (+74 more)
httpserver/: Makefile  README.md  build.sh  httpserver  httpserver.cc  httpserver.hpp  main.cc  myDaemom.hpp  protocol.hpp  sock.hpp  tcpserver.hpp  utility.hpp
mine_sweeper/: README.md  mine_sweeper.sln
plant_star_battle/: plant_star_battle.sln  readme.md
tcMallocSimple/: README.md
从零实现http项目/: Makefile  httpserver
(+120 files in other folders)
